# python-text-recognition

./: .gitignore  README.md  config.py  data_labels.py  main.py  model.py  predict.py  pyproject.toml  train.py  utils.py
