[project]
name = "python-text-recognition"
version = "0.1.0"
description = "Text recognition training and predicting model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "idx2numpy>=1.2.3",
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.3",
    "tensorflow>=2.20.0",
]
